# obs-service-replace_using_package_version

./: .bumpversion.cfg  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  obs-service-replace_using_package_version.spec  pyproject.toml  replace_using_package_version  replace_using_package_version.service  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
integration_tests/: test_version_extraction.py
integration_tests/assets/: hello-world-1.1.2.P3-1.x86_64.rpm
replaceUsingPackageVersion/: replace_using_package_version.py  replace_using_package_version.service  version.py
replace_using_package_version/: replace_using_package_version.py
rpm/: obs-service-replace_using_package_version-spec-template
test/: replace_using_package_version_test.py
